--- a/big_picture.qmd
+++ b/big_picture.qmd
@@ -1,65 +1,34 @@
 ---
-title: "Big Picture"
-description: "A 538/Upshot style article about the data."
+title: "Unlocking Childhood Success: The Surprising Key Revealed!"
+description: "Discover the Secret to Children's Success - It's Not What You Think!"
+author: "Team 12"
 toc: true
 draft: FALSE
 ---
 
-![](images/The_Big_Picture_2.jpeg)
+![](images/Diversity.jpeg)
 
-This comes from the file `big_picture.Rmd`.
+Where children grow up matters. Their zip code, encompassing factors such as school poverty, the number of early childhood education centers, and the poverty rate plays a big role in children’s future. As does their race, access to health and food, and their median household income.
 
-Think of this page as your 538/Upshot style article. This means that you should try to tell a story through the data and your analysis. Read articles from those sites and similar sites to get a feeling for what they are like. Try to write in the style of a news or popular article. Importantly, this pge should be geared towards the general public. You shouldn't assume the reader understands how to interpret a linear regression. Focus on interpretation and visualizations.
+Of 29 indicators weighed to predict a scored measure of a child’s access to opportunities, the employment rate of the region the child grows up in is most influential.
 
----
+Researchers broke the United States into four regions. The Northeast region has the highest average child opportunity scores and the South has the lowest. Within these regions, the impact of the employment rate significantly stood out.
 
-## Rubric: On this page
+![](https://lh7-us.googleusercontent.com/ygiXTJL2Y6cUOs7KxuuHemj3QdmCe0Hl3RP-bqk_H0Wr7o1rsSxT7Gf8bVFv15G6SCvFQKCVxznt6Lv0WKWRlnIfqQDkNkqNEVzZJW91DJMp_1ok1T8_9gnTnMPq0vi_d6Mj-65MfihM8394Ym4UOB8)
 
-You will
+A high employment rate often indicates a thriving local economy with ample job opportunities, which can translate to better living conditions, access to quality education, and a supportive community environment. Areas with low employment rates may struggle with poverty, limited resources, and fewer opportunities for children to succeed. 
 
-* Title
-  * Your big picture page should have a creative/click-bait-y title/headline that provides a hint about your thesis.
-* Clarity of Explanation
-  * You should have a clear thesis/goal for this page. What are you trying to show? Make sure that you explain your analysis in detail but don't go into top much mathematics or statistics. The audience for this page is the general public (to the extent possible). Your thesis should be a statement, not a question.
-  * Each figure should be very polished and also not too complicated. There should be a clear interpretation of the figure so the figure has a clear purpose. Even something like a histogram can be difficult to interpret for non-experts.
-* Creativity
-  * Do your best to make things interesting. Think of a story. Think of how each part of your analysis supports the previous part or provides a different perspective.
-* This page should be self-contained.
-  
-**Note**: This page should have no code visible, i.e. use `#| echo: FALSE`.  
+The employment rate is a key indicator of a region's economic health, and is closely tied to poverty levels and social well-being. High employment rates are associated with lower poverty rates and better social outcomes, as people have the means to support themselves and their families. More broadly, the employment rate impacts public health, crime rates, and education. Areas with higher employment rates tend to have better access to healthcare and lower crime rates.
 
----
+From a policy perspective, the employment rate is a crucial metric for assessing the effectiveness of economic policies and interventions. Governments and policymakers often use the employment rate to gauge the success of their efforts to stimulate job growth and improve economic conditions.
 
-## Rubric: Other components
+\
+![](https://lh7-us.googleusercontent.com/X2_h6Va0Ub5sJ17iMVXOhwAS-sfybiWUhAEsiCCKidRXFoBztDz0vnhHZ48MM4eYcOaL8hTkhgEFJdD3mGr95Tlh5OSSmOADCbKUf2NtNaH-zcqCwfJrBVplAJ5x9iG1N-pV5VSvXGouvNp6bw5vMPU)
 
-### Interactive
+![](https://lh7-us.googleusercontent.com/aQyHv338O_QzsgZzcyC-1QUlqulhQsUZ4pNRK5_OqYdG-shWwYHMOjQNr0o_ZLo_WbLxbN9pJm6YpNch5_jBpb8CklRmgNzufqbSMd-VqMh_Pc6cxEe_1XMjWIHmjoz7W3PaEcoQIDvhY5tdcm5KSUw)
 
-You will also be required to make an interactive dashboard like [this one](/flex/flex.html).
+The distribution of employment rates in the Northeast and South regions are shown in the top left in each of the above figures. Aside from employment rate, median household incomes, shown in the second graph in the middle row, were secondly most associated with a region’s child opportunity scores. This suggests that policies aimed at boosting employment and income levels could help improve the overall economic health of regions like the South, where economic scores are lower.
 
-Your Big Data page should include a link to an interactive dashboard. The dashboard should be created either using Shiny or FlexDashboard (or another tool with professor's approval). This interactive component should in some way support your thesis from your big picture page. Good interactives often provide both high-level understanding of the data while allowing a user to investigate specific scenarios, observations, subgroups, etc.
+The impact of different indicators is essential for policymakers, educators, and communities to understand to address systemic inequalities and create environments where children in the United States have equal access to opportunities. By investing in education, healthcare, and economic development in underserved communities, and particularly monitoring their employment rate, the United States can help level the playing field and ensure that every child has the chance to reach their full potential, regardless of their zip code or background.
 
-* Quality and ease of use of the interactive components.
-Is it clear what can be explored using your interactive components?
-Does it enhance and reinforce your conclusions from the Big Picture?
-Plotly with default hover text will get no credit. Be creative!
-
-
-### Video Recording
-
-Make a video recording (probably using Zoom) demonstrating your interactive components.
-You should provide a quick explanation of your data and demonstrate some of the conclusions from your EDA.
-This video should be no longer than 4 minutes.
-Include a link to your video (and password if needed) in your README.md file on your Github repository. You are not required to provide a link on the website.
-This can be presented by any subset of the team members.
-
-
-### Rest of the Site
-
-Finally, here are important things to keep in mind for the rest of the site. 
-
-The main title of your page is informative.
-Each post has an author/description/informative title.
-All lab required posts are present.
-Each page (including the home page) has a nice featured image associated with it.
-Your about page is up to date and clean.
-You have removed the generic posts from the initial site template.
+Conclusion: Understanding the impact of these factors is essential for policymakers, educators, and communities to address systemic inequalities and create environments where children have equal access to opportunities. By investing in education, healthcare, and economic development in underserved communities, the United States can help level the playing field and ensure that every child has the chance to reach their full potential, regardless of their zip code or background.
